# routio

./: CMakeLists.txt
include/echolib/: datatypes.h  message.h
python/: build_wheels.sh  pyproject.toml  setup.py  setup.py.in
python/routio/: __init__.py  __main__.py  array.py  camera.py
src/: client.cpp  debug.cpp  debug.h  server.cpp
tests/python2/: run.sh
